# ants-client

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cache/: CMakeLists.txt  README.md
cache/embedding/: CMakeLists.txt  README.md
cache/embedding/include/: ants_embed.h  ants_tokenizer.h
cache/embedding/src/: embed.c  embed_forward.c  embed_forward.h  embed_gguf.c  embed_gguf.h  embed_model.c  embed_model.h  tokenizer.c  tokenizer_json.c
cache/embedding/tests/: test_embed.c  test_embed_forward.c  test_embed_gguf.c  test_embed_model.c  test_tokenizer.c  test_tokenizer_json.c
cache/embedding/tools/: embed_vectors.c  tok_timing.c
cache/semantic/: CMakeLists.txt  README.md
cache/semantic/include/: ants_semantic_cache.h
cache/semantic/src/: cache.c  cache_publish.c  cache_query.c  cache_server.c  cache_wire.c
cache/semantic/tests/: test_cache.c
cmd/: CMakeLists.txt
cmd/antsd/: CMakeLists.txt  antsd.c  config.c  config.h  run.c  run.h  util.c  util.h
cmd/antsd/tests/: test_antsd_config.c  test_antsd_run.c
economy/: CMakeLists.txt  README.md
economy/bond/: CMakeLists.txt  README.md
economy/bond/include/: ants_bond.h
economy/bond/src/: bond.c
economy/bond/tests/: test_bond.c
economy/ledger/: CMakeLists.txt  README.md
economy/ledger/include/: ants_ledger.h  ants_payment.h
economy/ledger/src/: ledger.c  payment.c
economy/ledger/tests/: test_ledger.c  test_payment.c
foundation/: CMakeLists.txt  README.md
foundation/cbor/: CMakeLists.txt  README.md
foundation/cbor/include/: ants_cbor.h
foundation/cbor/src/: cbor.c
foundation/cbor/tests/: test_cbor.c
foundation/crypto/: CMakeLists.txt  README.md
foundation/crypto/include/: ants_crypto.h
foundation/crypto/src/: crypto.c
foundation/crypto/tests/: rsa_kat_vectors.h  test_crypto.c
foundation/crypto/tools/: ecdsa_p256_vectors.c  ecdsa_p384_vectors.c  rsa_pss_vectors.c
foundation/tee/: CMakeLists.txt  README.md
foundation/tee/include/: ants_tee.h
foundation/tee/src/: der.c  der.h  tee.c  tee_roots.c  tee_roots.h  x509.c  x509.h  x509_chain.c  x509_chain.h
foundation/tee/tests/: cert_kat_vectors.h  snp_kat_vectors.h  tdx_kat_vectors.h  test_attestation.c  test_der.c  test_tee.c  test_x509.c  test_x509_chain.c
foundation/tee/tools/: snp_vectors.c  tdx_vectors.c
include/: ants_common.h
inference/: CMakeLists.txt  README.md
inference/kernels/: CMakeLists.txt  README.md
inference/kernels/include/: ants_canon.h
inference/kernels/src/: cpu_scalar.c
inference/kernels/tests/: test_canon.c
inference/orchestration/: CMakeLists.txt  README.md
inference/orchestration/include/: ants_inference.h
inference/orchestration/src/: orchestration.c
inference/orchestration/tests/: test_orchestration.c
network/: CMakeLists.txt  README.md
network/dht/: CMakeLists.txt  README.md
network/dht/include/: ants_dht.h
network/dht/src/: dht.c  dht_internal.h  dht_lookup.c  dht_lookup.h  dht_rpc.c  dht_rpc.h  dht_server.c  dht_server.h  dht_wire.c  dht_wire.h
network/dht/tests/: test_dht.c
network/gossip/: CMakeLists.txt  README.md
network/gossip/include/: ants_gossip.h
network/gossip/src/: gossip.c  gossip_transport.c
network/gossip/tests/: test_gossip.c
network/transport/: CMakeLists.txt  README.md
network/transport/include/: ants_transport.h
network/transport/src/: transport.c
network/transport/tests/: test_transport.c
reputation/: CMakeLists.txt  README.md
reputation/chain/: CMakeLists.txt  README.md
reputation/chain/include/: ants_chain.h
reputation/chain/src/: chain.c
reputation/chain/tests/: test_chain.c
reputation/chain/tools/: chain_vectors.c
reputation/crdt/: CMakeLists.txt  README.md
reputation/crdt/include/: ants_crdt.h
reputation/crdt/src/: crdt.c
reputation/crdt/tests/: test_crdt.c
reputation/identity/: CMakeLists.txt  README.md
reputation/identity/include/: ants_reputation.h
reputation/identity/src/: reputation.c
reputation/identity/tests/: test_reputation.c
reputation/identity/tools/: identity_vectors.c
