# cache/ layer
#
# Semantic cache (DHT-routed) and canonical embedding service.
# ~6 engineer-months total per IMPLEMENTATION.md.
# Depends on network/ + reputation/.

# Component #10 — Semantic cache (DHT-routed)  (5 EM)
# add_subdirectory(semantic)

# Component #11 — Canonical embedding service  (1 EM)
add_subdirectory(embedding)
