# economy/ layer
#
# Local economic ledger + bond accounting service.
# ~4 engineer-months total per IMPLEMENTATION.md.
# Depends on reputation/identity (component #9).

# Component #14 — Local economic ledger  (2 EM)
# add_subdirectory(ledger)

# Component #15 — Bond accounting service  (2 EM)
# add_subdirectory(bond)
