# reputation/ layer
#
# L1 CRDT, L2 PoUH chain, identity & reputation service.
# ~13 engineer-months total per IMPLEMENTATION.md.
# Depends on foundation/ + network/.

# Component #7 — L1 CRDT (G-Set) implementation  (4 EM)
# add_subdirectory(crdt)

# Component #8 — L2 PoUH chain  (6 EM)
# add_subdirectory(chain)

# Component #9 — Identity & reputation service  (3 EM)
# add_subdirectory(identity)
